@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!--
-SPDX-FileCopyrightText: Copyright Contributors to the GXF project
 
-SPDX-License-Identifier: Apache-2.0
+    Copyright 2019 Smart Society Services B.V.
+
+    Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.  You may obtain a copy of the License at
+
+        http://www.apache.org/licenses/LICENSE-2.0
+
 -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.opensmartgridplatform</groupId>
   <artifactId>super-osgp</artifactId>
-  <version>5.46.0-SNAPSHOT</version>
+  <version>5.28.2</version>
   <packaging>pom</packaging>
   <name>super-osgp</name>
   <!-- Description, Organization, Licences, URL and Distribution Management
@@ -40,44 +42,43 @@ SPDX-License-Identifier: Apache-2.0
   </distributionManagement>
 
   <properties>
-    <java.version>17</java.version>
+    <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <module.baseUri>${project.baseUri}/../</module.baseUri>
-    <osgp.version>5.46.0-SNAPSHOT</osgp.version>
-    <osgp.dlms.version>5.46.0-SNAPSHOT</osgp.dlms.version>
-    <osgp.shared.version>5.46.0-SNAPSHOT</osgp.shared.version>
-    <osgp.jasper-interface.version>5.46.0-SNAPSHOT</osgp.jasper-interface.version>
-    <spring.version>5.3.29</spring.version>
-    <spring.data.version>2.7.15</spring.data.version>
-    <spring.data.commons.version>2.7.15</spring.data.commons.version>
-    <spring.security.version>5.8.6</spring.security.version>
-    <spring.ws.version>3.1.6</spring.ws.version>
-    <reactor.version>2020.0.22</reactor.version>
+    <osgp.version>5.28.2</osgp.version>
+    <osgp.dlms.version>5.28.2</osgp.dlms.version>
+    <osgp.shared.version>5.28.2</osgp.shared.version>
+    <osgp.jasper-interface.version>5.28.2</osgp.jasper-interface.version>
+    <spring.version>5.3.22</spring.version>
+    <spring.data.version>2.2.9.RELEASE</spring.data.version>
+    <spring.data.commons.version>2.2.9.RELEASE</spring.data.commons.version>
+    <spring.security.version>5.5.8</spring.security.version>
+    <spring.ws.version>3.0.12.RELEASE</spring.ws.version>
+    <projectreactor.netty.version>1.0.11</projectreactor.netty.version>
     <assertj.version>3.16.1</assertj.version>
     <xmlunit.version>1.6</xmlunit.version>
-    <mockito.core.version>4.8.0</mockito.core.version>
+    <mockito.core.version>4.1.0</mockito.core.version>
     <okhttp3.mockwebserver.version>4.9.1</okhttp3.mockwebserver.version>
     <apache.wss4j.version>1.6.19</apache.wss4j.version>
-    <servlet.version>4.0.1</servlet.version>
+    <servlet.version>3.0.1</servlet.version>
     <servlet.jstl.version>1.2</servlet.jstl.version>
-    <hibernate.version>5.6.12.Final</hibernate.version>
+    <hibernate.version>5.6.9.Final</hibernate.version>
     <hibernate.validator.version>6.1.5.Final</hibernate.validator.version>
-    <javax.persistence.api.version>2.2</javax.persistence.api.version>
+    <hibernate.jpa.version>1.0.2.Final</hibernate.jpa.version>
     <javax.validation.api.version>2.0.1.Final</javax.validation.api.version>
     <junit.version>5.7.0</junit.version>
     <junit.platform.launcher.version>1.6.2</junit.platform.launcher.version>
-    <byte.buddy.version>1.12.17</byte.buddy.version>
+    <byte.buddy.version>1.10.18</byte.buddy.version>
     <joda.version>2.10.6</joda.version>
     <flyway.version>7.3.0</flyway.version>
     <slf4j.version>1.7.30</slf4j.version>
     <apache.commons.lang.version>3.10</apache.commons.lang.version>
-    <apache.commons.text.version>1.10.0</apache.commons.text.version>
+    <apache.commons.text.version>1.8</apache.commons.text.version>
     <apache.httpcomponents.version>4.5.13</apache.httpcomponents.version>
     <apache.httpcomponents.httpcore.version>4.4.13</apache.httpcomponents.httpcore.version>
     <commons.codec.version>1.14</commons.codec.version>
     <orika.version>1.5.4</orika.version>
-    <msal.version>1.13.0</msal.version>
     <jxr.version>3.1.1</jxr.version>
     <maven.project.info.reports.plugin.version>3.2.2</maven.project.info.reports.plugin.version>
     <maven.site.plugin>3.11.0</maven.site.plugin>
@@ -94,44 +95,42 @@ SPDX-License-Identifier: Apache-2.0
     <maven.enforcer.maven.version>3.8.5</maven.enforcer.maven.version>
     <jaxb2.maven.plugin.version>2.5.0</jaxb2.maven.plugin.version>
     <jaxb.api.version>2.3.1</jaxb.api.version>
-    <jaxb.core.version>2.3.0.1</jaxb.core.version>
     <spotbugs.maven.plugin.version>4.6.0.0</spotbugs.maven.plugin.version>
     <pmd.maven.plugin.version>3.16.0</pmd.maven.plugin.version>
     <checkstyle.maven.plugin.version>3.1.2</checkstyle.maven.plugin.version>
     <dependency-check.maven.plugin.version>7.0.2</dependency-check.maven.plugin.version>
     <versions.maven.plugin.version>2.10.0</versions.maven.plugin.version>
-    <fmt-maven-plugin.version>2.19</fmt-maven-plugin.version>
-    <apache.activemq.version>5.17.2</apache.activemq.version>
-    <logback.version>1.2.11</logback.version>
+    <fmt-maven-plugin.version>2.9.1</fmt-maven-plugin.version>
+    <apache.activemq.version>5.16.0</apache.activemq.version>
+    <logback.version>1.2.8</logback.version>
     <apache.commons.schema>2.2.5</apache.commons.schema>
     <maven.clean.plugin.version>3.1.0</maven.clean.plugin.version>
     <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
-    <netty.version>4.1.80.Final</netty.version>
-    <openmuc.jdlms.version>1.8.0</openmuc.jdlms.version>
-    <openmuc.jdlms-annotation.version>1.8.0</openmuc.jdlms-annotation.version>
+    <netty.version>4.1.53.Final</netty.version>
+    <openmuc.jdlms.version>1.7.1</openmuc.jdlms.version>
     <beanit.openiec61850.version>1.8.0</beanit.openiec61850.version>
     <openmuc.j60870.version>1.4.0</openmuc.j60870.version>
     <javax.inject.version>1</javax.inject.version>
     <javax.annotation.version>1.3.2</javax.annotation.version>
     <license.maven.plugin>3.0</license.maven.plugin>
-    <jackson.version>2.13.4</jackson.version>
-    <jackson-databind.version>2.13.4.2</jackson-databind.version>
-    <cxf.version>3.4.8</cxf.version>
+    <jackson.version>2.11.0</jackson.version>
+    <jackson-databind.version>2.10.5.1</jackson-databind.version>
+    <cxf.version>3.4.1</cxf.version>
     <quartz.version>2.3.2</quartz.version>
     <hikaricp.version>3.4.5</hikaricp.version>
-    <micrometer.version>1.10.0</micrometer.version>
+    <micrometer.version>1.6.3</micrometer.version>
     <protobuf.version>2.4.1</protobuf.version>
-    <guava.version>32.1.2-jre</guava.version>
+    <guava.version>29.0-jre</guava.version>
     <spotbugs.version>4.6.0</spotbugs.version>
-    <jacoco.version>0.8.8</jacoco.version>
+    <jacoco.version>0.8.5</jacoco.version>
     <selenium.java.version>3.141.59</selenium.java.version>
     <SunriseSunsetCalculator.version>1.2</SunriseSunsetCalculator.version>
     <ant.junit.version>1.10.8</ant.junit.version>
     <args4j.version>2.33</args4j.version>
-    <cucumber.version>5.7.0</cucumber.version>
+    <cucumber.version>5.6.0</cucumber.version>
     <testcontainers.version>1.16.2</testcontainers.version>
     <sun.httpserver.version>20070405</sun.httpserver.version>
-    <postgresql.version>42.6.0</postgresql.version>
+    <postgresql.version>42.2.12</postgresql.version>
     <javax.xml.soap-api.version>1.4.0</javax.xml.soap-api.version>
     <!-- to avoid conflicts with spring-kafka-test the older kafka version 2.4.1 is used-->
     <kafka.version>2.4.1</kafka.version>
@@ -139,9 +138,9 @@ SPDX-License-Identifier: Apache-2.0
     <spring.kafka.version>2.4.7.RELEASE</spring.kafka.version>
     <!-- spring-kafka-test needs a 2.12 version of the scala libraries -->
     <scala.lang.version>2.12.11</scala.lang.version>
-    <lombok.version>1.18.24</lombok.version>
+    <lombok.version>1.18.12</lombok.version>
     <hivemq-mqtt-client.version>1.2.0</hivemq-mqtt-client.version>
-    <apache.commons.io.version>2.11.0</apache.commons.io.version>
+    <apache.commons.io.version>1.3.2</apache.commons.io.version>
     <!-- Default always skip integration tests, to ensure all developer data
       is retained -->
     <skipITs>true</skipITs>
@@ -150,9 +149,6 @@ SPDX-License-Identifier: Apache-2.0
     <skipITCoverage>true</skipITCoverage>
     <!-- Default always skip creating a test jar with dependencies tests -->
     <skipTestJarWithDependenciesAssembly>true</skipTestJarWithDependenciesAssembly>
-
-    <!-- Command-line option to pass arguments for surefire -->
-    <surefireArgLine/>
   </properties>
 
   <dependencyManagement>
@@ -280,11 +276,6 @@ SPDX-License-Identifier: Apache-2.0
       <dependency>
         <groupId>org.opensmartgridplatform</groupId>
         <artifactId>osgp-kafka-logger</artifactId>
-        <version>${osgp.shared.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opensmartgridplatform</groupId>
-        <artifactId>osgp-kafka-config</artifactId>
         <version>${osgp.shared.version}</version>
       </dependency>
       <dependency>
@@ -457,11 +448,9 @@ SPDX-License-Identifier: Apache-2.0
         <version>${spring.version}</version>
       </dependency>
       <dependency>
-        <groupId>io.projectreactor</groupId>
-        <artifactId>reactor-bom</artifactId>
-        <version>${reactor.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
+        <groupId>io.projectreactor.netty</groupId>
+        <artifactId>reactor-netty-http</artifactId>
+        <version>${projectreactor.netty.version}</version>
       </dependency>
 
       <!-- Spring JMS -->
@@ -583,16 +572,6 @@ SPDX-License-Identifier: Apache-2.0
         <artifactId>jaxb-api</artifactId>
         <version>${jaxb.api.version}</version>
       </dependency>
-      <dependency>
-        <groupId>com.sun.xml.bind</groupId>
-        <artifactId>jaxb-core</artifactId>
-        <version>${jaxb.core.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.sun.xml.bind</groupId>
-        <artifactId>jaxb-impl</artifactId>
-        <version>${jaxb.core.version}</version>
-      </dependency>
 
       <!-- Joda Time (Date/Time functions) -->
       <dependency>
@@ -650,11 +629,6 @@ SPDX-License-Identifier: Apache-2.0
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-annotations</artifactId>
-        <version>${jackson.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
         <version>${jackson-databind.version}</version>
       </dependency>
@@ -691,14 +665,14 @@ SPDX-License-Identifier: Apache-2.0
         <version>${hibernate.version}</version>
       </dependency>
       <dependency>
-          <groupId>javax.persistence</groupId>
-          <artifactId>javax.persistence-api</artifactId>
-          <version>${javax.persistence.api.version}</version>
+        <groupId>org.hibernate.javax.persistence</groupId>
+        <artifactId>hibernate-jpa-2.1-api</artifactId>
+        <version>${hibernate.jpa.version}</version>
       </dependency>
 
       <!-- Hibernate validator -->
       <dependency>
-        <groupId>org.hibernate.validator</groupId>
+        <groupId>org.hibernate</groupId>
         <artifactId>hibernate-validator</artifactId>
         <version>${hibernate.validator.version}</version>
         <exclusions>
@@ -726,10 +700,9 @@ SPDX-License-Identifier: Apache-2.0
       <!-- Netty (TCP server) -->
       <dependency>
         <groupId>io.netty</groupId>
-        <artifactId>netty-bom</artifactId>
+        <artifactId>netty-all</artifactId>
         <version>${netty.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
+        <scope>compile</scope>
       </dependency>
 
       <!-- Jakarta commons codec -->
@@ -847,13 +820,6 @@ SPDX-License-Identifier: Apache-2.0
       <version>${hivemq-mqtt-client.version}</version>
     </dependency>
 
-      <!-- MSAL Azure AD -->
-      <dependency>
-        <groupId>com.microsoft.azure</groupId>
-        <artifactId>msal4j</artifactId>
-        <version>${msal.version}</version>
-      </dependency>
-
       <!-- Orika (mapping framework) -->
       <dependency>
         <groupId>ma.glasnost.orika</groupId>
@@ -876,6 +842,13 @@ SPDX-License-Identifier: Apache-2.0
         <groupId>org.openmuc</groupId>
         <artifactId>jdlms</artifactId>
         <version>${openmuc.jdlms.version}</version>
+        <exclusions>
+          <exclusion>
+            <!-- Exclude to ensure compatibility with (older) 1.51 users -->
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
 
       <!-- Google Protocol Buffers -->
@@ -1149,7 +1122,7 @@ SPDX-License-Identifier: Apache-2.0
     <repository>
       <id>fuse-repo</id>
       <name>Fuse Source</name>
-      <url>https://repo.fusesource.com/nexus/content/groups/public/</url>
+      <url>http://repo.fusesource.com/nexus/content/groups/public/</url>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -1230,10 +1203,7 @@ SPDX-License-Identifier: Apache-2.0
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven.surefire.plugin.version}</version>
           <configuration>
-            <argLine>
-              --add-opens java.base/java.lang=ALL-UNNAMED
-              ${surefireArgLine}
-            </argLine>
+            <argLine>${surefireArgLine}</argLine>
             <excludes>
               <exclude>**/*$*</exclude>
               <!-- Cucumber integration tests, included with Failsafe. -->
@@ -1402,33 +1372,13 @@ SPDX-License-Identifier: Apache-2.0
         </plugin>
 
         <plugin>
-          <groupId>com.spotify.fmt</groupId>
+          <groupId>com.coveo</groupId>
           <artifactId>fmt-maven-plugin</artifactId>
           <version>${fmt-maven-plugin.version}</version>
           <configuration>
             <additionalSourceDirectories>
               <param>src/integration-test/java</param>
             </additionalSourceDirectories>
-          </configuration>
-        </plugin>
-
-        <plugin>
-          <groupId>org.cyclonedx</groupId>
-          <artifactId>cyclonedx-maven-plugin</artifactId>
-          <version>2.7.2</version>
-          <executions>
-            <execution>
-              <phase>prepare-package</phase>
-              <goals>
-                <goal>makeBom</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <projectType>application</projectType>
-            <!-- Put the boms in WEB-INF, that way they are packaged with the .war file -->
-            <outputName>${project.build.finalName}/WEB-INF/bom</outputName>
-            <includeProvidedScope>false</includeProvidedScope>
           </configuration>
         </plugin>
       </plugins>
@@ -1446,7 +1396,7 @@ SPDX-License-Identifier: Apache-2.0
       </plugin>
 
       <plugin>
-        <groupId>com.spotify.fmt</groupId>
+        <groupId>com.coveo</groupId>
         <artifactId>fmt-maven-plugin</artifactId>
         <executions>
           <execution>
